--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
+    "socket.io": "^2.3.0",
     "validator": "^13.1.1"
   }
 }
